submariner/cluster/submariner-operator/gateways.submariner.io-cr-test2-worker.yaml
apiVersion: submariner.io/v1
kind: Gateway
metadata:
  name: test2-worker
  namespace: submariner-operator
